# deribit_data

./: README.md
angular-fin-dashboard/: .gitignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.bench.json  tsconfig.json
angular-fin-dashboard/benchmarks/: update-benchmark.ts
angular-fin-dashboard/src/: index.html  styles.scss
angular-fin-dashboard/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  constants.ts
angular-fin-dashboard/src/app/data/: generate-tickers.ts  historical-surface.ts  options-chain.ts  static-instruments.ts
angular-fin-dashboard/src/app/models/: deribit.ts  frame-stats.ts  vol-surface.ts
angular-fin-dashboard/src/app/services/: deribit-history.service.ts  deribit-websocket.service.ts  deribit.service.ts
angular-fin-dashboard/src/app/state/: dashboard.actions.ts  dashboard.reducer.ts  dashboard.selectors.ts
angular-fin-dashboard/src/types/: webgpu.d.ts
deribit_arb/: Cargo.toml  README.md
deribit_arb/src/: config.rs  lib.rs  main.rs
deribit_arb/src/chain/: mod.rs
deribit_arb/src/client/: mod.rs
deribit_arb/src/detect/: mod.rs
deribit_arb/src/exec/: mod.rs
deribit_arb/src/fees/: mod.rs
deribit_arb/src/model/: mod.rs
deribit_arb/src/render/: mod.rs
deribit_arb/src/risk/: mod.rs
deribit_arb/tests/: detectors.rs  fees.rs  planner.rs
oldest_eth_options/: Cargo.toml
oldest_eth_options/.deribit_cache/: instruments_www.deribit.com_api_v2.json
oldest_eth_options/src/: main.rs
optstore/: .gitignore  Cargo.toml
optstore/docs/: ADR-0001.md  README.md
optstore/examples/: generate_ticks.rs
optstore/src/: block.rs  cli.rs  codec.rs  file.rs  index.rs  lib.rs  main.rs  progress.rs  reader.rs  schema.rs  util.rs  wal.rs  writer.rs
optstore/src/retrieve/: cache.rs  deribit.rs  mod.rs  normalize.rs
optstore/tests/: corruption.rs  dedup.rs  dict.rs  progress_json.rs  retrieve_manifest.rs  retrieve_roundtrip.rs  roundtrip.rs  selections.rs
svi_surface/: lake-manifest.json  lakefile.lean
svi_surface/SviSurface/: Base.lean  Tests.lean
vol_surface_viewer/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
vol_surface_viewer/scripts/: calibrateGarch.js  fetchOptionsData.mjs
vol_surface_viewer/src/: garch.ts  hud.ts  main.ts  randomDataFeed.ts  staticDataFeed.ts  surfaceRenderer.ts  types.ts
