[package]
name = "deribit_arb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"
comfy-table = "7"
csv = "1"
polars = { version = "0.41", optional = true, default-features = false, features = ["lazy", "fmt"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
statrs = "0.16"
parking_lot = "0.12"
once_cell = "1"
url = "2"
rand = "0.8"
async-trait = "0.1"

[features]
default = []
export-polars = ["polars"]

[dev-dependencies]
proptest = "1"
rstest = "0.18"
serde_json = "1"
assert_approx_eq = "1"
