[package]
name = "optstore"
version = "0.1.0"
edition = "2021"

[lib]
name = "optstore"
path = "src/lib.rs"

[[bin]]
name = "optstore"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
indicatif = { version = "0.17", features = ["tokio"] }
memmap2 = "0.9"
zstd = { version = "0.13", default-features = false, features = ["experimental"] }
lz4_flex = "0.11"
crc32fast = "1"
bytemuck = { version = "1", features = ["derive"] }
rayon = "1.8"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
governor = { version = "0.6", default-features = false, features = ["std", "dashmap"] }
bytes = "1.6"
xxhash-rust = { version = "0.8", features = ["std", "xxh3"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
humansize = "2"
async-trait = "0.1"
fxhash = "0.2"
rand = "0.8"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
bytecount = "0.6"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[features]
default = []
